name:                 FeedReader
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               Nick Smelik
maintainer:           kerzok11@gmail.com
category:             Network
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable FeedReader
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base, data-default-class, lens >=1.2, gtk3, glade, HDBC, HDBC-sqlite3, HTTP, aeson, wreq, utf8-string, uuid, bytestring, wx, text-regex-replace, text, extra, mtl, glib, directory, transformers
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -threaded -Wall -fno-warn-unused-do-bind
